--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "firebase": "^10.0.0",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "postcss": "8.4.26",
