--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.0.0",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
