--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-onesignal": "^2.0.4",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
