--- a/package.json
+++ b/package.json
@@ -1,51 +1,55 @@
 {
-  "name": "group-a",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@tanstack/react-table": "^8.9.3",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "add": "^2.0.6",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "firebase": "^10.0.0",
-    "lucide-react": "^0.260.0",
-    "next": "13.4.10",
-    "next-pwa": "^5.6.0",
-    "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-day-picker": "^8.8.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-onesignal": "^2.0.4",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
-  }
+    "name": "group-a",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@radix-ui/react-accordion": "^1.1.2",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.4",
+        "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.6",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-toast": "^1.1.4",
+        "@tanstack/react-query": "^4.29.25",
+        "@tanstack/react-table": "^8.9.3",
+        "@types/node": "20.4.2",
+        "@types/react": "18.2.15",
+        "@types/react-dom": "18.2.7",
+        "add": "^2.0.6",
+        "autoprefixer": "10.4.14",
+        "class-variance-authority": "^0.6.1",
+        "clsx": "^1.2.1",
+        "date-fns": "^2.30.0",
+        "eslint": "8.45.0",
+        "eslint-config-next": "13.4.10",
+        "firebase": "^10.0.0",
+        "lucide-react": "^0.260.0",
+        "next": "13.4.10",
+        "next-pwa": "^5.6.0",
+        "postcss": "8.4.26",
+        "prettier": "^3.0.0",
+        "prettier-plugin-tailwindcss": "^0.4.1",
+        "react": "18.2.0",
+        "react-day-picker": "^8.8.0",
+        "react-dom": "18.2.0",
+        "react-hot-toast": "^2.4.1",
+        "react-onesignal": "^2.0.4",
+        "tailwind-merge": "^1.13.2",
+        "tailwindcss": "3.3.3",
+        "tailwindcss-animate": "^1.0.6",
+        "typescript": "5.1.6",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.9"
+    }
 }
