chore: move TaskTable module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        "src/components/table/TastTable"
+    ],
     "exclude": ["node_modules"]
 }
