--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint": "8.45.0",
         "eslint-config-next": "13.4.10",
         "firebase": "^10.0.0",
+        "framer-motion": "^10.13.0",
         "lucide-react": "^0.261.0",
         "next": "13.4.10",
         "next-pwa": "^5.6.0",
