--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@tailwindcss/typography": "^0.5.9"
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/uuid": "^9.0.2"
     }
 }
