--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-dom": "18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-onesignal": "^2.0.4",
+        "react-qr-code": "^2.0.11",
         "tailwind-merge": "^1.13.2",
         "tailwindcss": "3.3.3",
         "tailwindcss-animate": "^1.0.6",
