--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.9",
-        "@types/uuid": "^9.0.2"
+        "@types/uuid": "^9.0.2",
+        "firebase-tools": "^12.4.5"
     }
 }
